# us-static-data

./: .gitignore  deploy  extract_zipcodes.ipynb  pyproject.toml
doc/state/: AL.json  MN.json  MS.json  NH.json  PA.json  WI.json  WV.json
doc/state/AK/: Anvik.json  Arctic Village.json  Atqasuk.json  Clear.json  Coffman Cove.json  Craig.json  Elim.json  Fairbanks.json  Gakona.json  Gambell.json  Girdwood.json  Kivalina.json  Klawock.json  Kotlik.json  Kwigillingok.json  Lake Minchumina.json  (+23 more)
doc/zipcode/: 00601.json  00647.json  00660.json  00669.json  00692.json  00707.json  00723.json  00727.json  00736.json  00740.json  00778.json  00907.json  00920.json  00925.json  00969.json  01002.json  01005.json  01007.json  01012.json  01031.json  01035.json  01036.json  01038.json  01054.json  01062.json  01077.json  01081.json  01084.json  01088.json  01118.json  01119.json  01224.json  01236.json  01256.json  01330.json  01339.json  01367.json  01368.json  01378.json  01432.json  (+5726 more)
docs/state/: AR.json  AS.json  CA.json  CT.json  GA.json  HI.json  KY.json  MD.json  MP.json  SC.json
docs/zipcode/: 00610.json  00612.json  00623.json  00627.json  00631.json  00646.json  00650.json  00656.json  00667.json  00685.json  00688.json  00694.json  00717.json  00731.json  00739.json  00741.json  00745.json  00772.json  00851.json  00906.json  00918.json  00921.json  00923.json  00924.json  00934.json  00952.json  00961.json  00987.json  01022.json  01029.json  01040.json  01066.json  01070.json  01074.json  01085.json  01089.json  01095.json  01105.json  01107.json  01109.json  (+5747 more)
(+9458 files in other folders)
