[project]
name = "us-static-data"
version = "0.1.0"
description = ""
authors = [
    {name = "Miguel",email = "maroja01@uc.cl"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modin (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "notebook (>=7.4.5,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
